# exathena

./: .credo.exs  .dialyzer_ignore.exs  .formatter.exs  .gitignore  README.md  coveralls.json  flake.nix  mix.exs
.github/: dependabot.yml
.github/workflows/: code_coverage.yml  continuous_delivery.yml  continuous_integration.yml
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: exathena.ex  exathena_events.ex  exathena_web.ex
lib/exathena/: accounts.ex  application.ex  config.ex  database.ex  encrypted_types.ex  io.ex  vault.ex
lib/exathena/accounts/: ban.ex  subscription.ex  user.ex
lib/exathena/config/: login_athena.ex  subnet_athena.ex
lib/exathena_events/: producer.ex
lib/exathena_logger/: console.ex  sql.ex
lib/exathena_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/mix/: exathena.ex
native/exathena_packets/: Cargo.toml  rust-toolchain.toml
native/exathena_packets/src/: lib.rs
settings/: config.exs  dev.exs  login_athena.conf  test.exs
sql-files/: logs.sql  main.sql  seeds.exs  structure.sql
sql-files/migrations/: 20220405004620_create_oban_tables.exs  20220405004906_create_users.exs  20220407120351_create_bans.exs  20220429001105_create_subscriptions.exs  20260704215351_update_oban_to_v14.exs
src/exathena/: .formatter.exs  .gitignore  .sobelow-conf  coveralls.json  mix.exs
test/: exathena_events_test.exs  exathena_test.exs  test_helper.exs
test/exathena/: accounts_test.exs  database_test.exs  io_test.exs
test/exathena_logger/: console_test.exs
test/support/: conn_case.ex  data_case.ex  fixtures.ex
(+130 files in other folders)
